# prototype

./: .gitmodules  CMakeLists.txt  README.md
cmake/: EthCompilerSettings.cmake  FindWAVM.cmake
cmake/scripts/: install_deps.cmake
eth/: CMakeLists.txt  Register.cpp  Register.h  VotePrecompiled.cpp  config.json  main.cpp
ethkey/: CMakeLists.txt  KeyAux.h
ethvm/: CMakeLists.txt  main.cpp
libdevcore/: Address.cpp  Address.h  Common.h  Exceptions.h  Log.cpp  Log.h  MemoryDB.h  Terminal.h  TrieDB.h
libethashseal/: CMakeLists.txt  ETICPUMiner.cpp  ETICPUMiner.h  ETIProofOfWork.cpp  ETIProofOfWork.h  Ethash.cpp  Ethash.h  EthashCPUMiner.cpp  EthashClient.h  EthashProofOfWork.h  jumphash_sdk.cpp  jumphash_sdk.h
libethashseal/genesis/: mainNetwork.cpp  ropsten.cpp
libethashseal/genesis/test/: byzantiumTest.cpp  constantinopleTest.cpp  eip150Test.cpp  eip158Test.cpp  frontierNoProofTest.cpp  frontierTest.cpp  homesteadTest.cpp  mainNetworkNoProofTest.cpp  mainNetworkTest.cpp
libethcore/: BasicAuthority.h  BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  ChainOperationParams.cpp  ChainOperationParams.h  Common.cpp  Common.h  EVMSchedule.h  Exceptions.h  Precompiled.cpp  Precompiled.h  SealEngine.cpp  SealEngine.h  TransactionBase.cpp  TransactionBase.h
libethereum/: Account.cpp  BenchMark.cpp  BenchMark.h  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  BlockChainSync.cpp  BlockChainSync.h  BlockChainSyncState.cpp  BlockChainSyncState.h  BlockQueue.cpp  BlockQueue.h  CMakeLists.txt  ChainParams.cpp  ChainParams.h  Client.cpp  Client.h  ClientBase.cpp  ClientBase.h  ClientTest.cpp  ClientTest.h  CommonNet.h  EthereumHost.cpp  EthereumHost.h  EthereumPeer.cpp  EthereumPeer.h  Executive.cpp  Executive.h  ExtVM.cpp  ExtVM.h  GenericFarm.h  GenericMiner.h  Interface.cpp  Interface.h  State.cpp  State.h  TransactionQueue.cpp  TransactionQueue.h  Vote.cpp  (+1 more)
libevm/: CMakeLists.txt  ExtVMFace.h  VM.cpp  VM.h  VMFace.h  VMFactory.cpp  VMFactory.h  Vote.cpp  Vote.h  WASM_VM.cpp  WASM_VM.h
libjumphash/: CMakeLists.txt  jumphash.h  w_blake.c  w_bmw.c  w_cubehash.c  w_echo.c  w_fugue.c  w_groestl.c  w_hamsi.c  w_hamsi_helper.h  w_jh.c  w_keccak.c  w_luffa.c  w_shavite.c  w_simd.c  w_skein.c  wutil.h
libp2p/: CMakeLists.txt  Capability.h  Common.h  FakeHost.cpp  FakeHost.h  FakePeer.cpp  FakePeer.h  FakeSession.cpp  FakeSession.h  Host.cpp  Host.h  HostCapability.cpp  HostCapability.h  NodeTable.h  Peer.h  RLPxHandshake.cpp  Session.cpp  Session.h
libp2ptestrobot/: CMakeLists.txt  P2PTestClient.cpp  P2PTestClient.hpp  P2PTestRobot.cpp  P2PTestRobot.hpp  P2PUnitTest.cpp  P2PUnitTest.h
libproducer/: CMakeLists.txt  chain_controller.cpp  chain_controller.hpp  chainbase.cpp  chainbase.hpp  config.hpp  global_property_object.hpp  producer_object.hpp  producer_objects.cpp  producer_objects.hpp  producer_plugin.cpp  producer_plugin.hpp  rand.hpp  types.hpp  version.cpp  version.hpp
libweb3jsonrpc/: AccountHolder.cpp  CMakeLists.txt  Debug.cpp  Eth.cpp  Eth.h  EthFace.h  IpcServerBase.cpp  JsonHelper.cpp  Personal.cpp  Personal.h  PersonalFace.h  UnixSocketServer.cpp  WinPipeServer.cpp  eth.json  personal.json
libwebthree/: CMakeLists.txt  WebThree.h
scripts/: conv2utf8.sh  install_deps.sh  jsonrpcproxy.py
test/: CMakeLists.txt
test/tools/fuzzTesting/: createRandomTest.cpp  fuzzHelper.cpp
test/tools/jsontests/: BlockChainTests.cpp  BlockChainTests.h  DPwTestsHelper.cpp  DPwTestsHelper.h  DposTests.cpp  DposTests.h  PowTests.cpp  Register.cpp  StateTests.cpp  TransactionTests.cpp  VotePrecompiled.cpp  WAVMTests.cpp  vm.cpp
test/tools/jsontests/DposTests/: address-keys.json
test/tools/jsontests/P2PTest/: ChainASameChainB.json  ChainASyncB.json  chainAchainBIrr.json  p2ptest.json  p2ptestfiller.json
test/tools/jsontests/P2PTest/p2ptest-linux-script/: p2ptest-ChainASyncB.sh  p2ptest-FindingCommonBlockHeader-BlockBodies.sh  p2ptest-FindingCommonBlockHeader-BlockHeaderIsnotRequest.sh  p2ptest-FindingCommonBlockHeader-BlockHeaderMuch.sh  p2ptest-FindingCommonBlockHeader-BlockHeaderNumberEqualIrr.sh  p2ptest-FindingCommonBlockHeader-BlockHeaderNumberIsCommon.sh  p2ptest-FindingCommonBlockHeader-BlockHeaderNumberUnderIrr.sh  p2ptest-FindingCommonBlockHeader-BlockHeaderNumberUpperIrr.sh  p2ptest-FindingCommonBlockHeader-BlockHeaderZero.sh  p2ptest-FindingCommonNewPeerStatus-InvalidGenesisHashStatus.sh  p2ptest-FindingCommonNewPeerStatus-InvalidNetworkIDStatus.sh  p2ptest-attack.sh  (+22 more)
test/tools/jsontests/WAVMTest/: accessDestroy.wasm  assert.wasm  cast.wasm  currency.wasm  currency_2.wasm  default.wasm  game.wasm  gas.wasm  infiniteLoop.wasm  infiniteLoop2.wasm  initGas_1.wasm  initGas_2.wasm  initGas_3.wasm  lackApply.wasm  malloc.wasm  memoryRef.wasm  newDelete_2.wasm  overflow.wasm  overflow2.wasm  overflow3.wasm  throw.wasm  transferBalance.wasm  unknowInstruction.wasm
test/tools/libtesteth/: BlockChainHelper.cpp  BlockChainHelper.h  ImportTest.cpp  Options.cpp  TestHelper.cpp  TestHelper.h  TestOutputHelper.cpp  boostTest.cpp
test/tools/libtestutils/: Common.cpp  Common.h
test/unittests/external-dependencies/: boost.cpp
test/unittests/libdevcore/: CommonJS.cpp  FixedHash.cpp  RangeMask.cpp  core.cpp  rlp.cpp
test/unittests/libdevcrypto/: AES.cpp  LibSnark.cpp  SecretStore.cpp  crypto.cpp  hexPrefix.cpp  trie.cpp
test/unittests/libethashseal/: EthashTest.cpp
test/unittests/libethcore/: PrecompiledTest.cpp  SealEngineTest.cpp  commonjs.cpp  dagger.cpp  difficulty.cpp  keymanager.cpp
test/unittests/libethereum/: Block.cpp  BlockChain.cpp  BlockChainInsert.cpp  BlockQueue.cpp  ClientBase.cpp  EthereumPeerTest.cpp  ExtVMTest.cpp  GasPricer.cpp  Genesis.cpp  SnapshotImporterTest.cpp  StateUnitTests.cpp  Transaction.cpp  TransactionQueue.cpp
test/unittests/libp2p/: capability.cpp  eip-8.cpp  net.cpp  peer.cpp  rlpx.cpp
test/unittests/libtesteth/: blockchainTest.cpp
test/unittests/libweb3core/: memorydb.cpp  overlaydb.cpp
test/unittests/libweb3jsonrpc/: AccountHolder.cpp  Client.cpp
utils/: CMakeLists.txt
utils/fc/: CMakeLists.txt
utils/fc/src/: time.cpp
(+4 files in other folders)
